--- a/tasks/mail.yml
+++ b/tasks/mail.yml
@@ -14,22 +14,25 @@
 - name: Compile logs to email.txt    
   shell: cat ./{{pre_check_file}} >> ./email.txt
   delegate_to: localhost # ansible
-       
-- name: Send email to group.
-  mail:
-    subject: "{{email_subject}}"
-    host: '{{smtp_server}}'
-    port: 25
-    body: '{{email_body}}'
-    from: '{{email_group}}'
-    to: '{{email_to}}'
-    attach: './email.txt'
-  delegate_to: localhost # ansible
-  run_once: true  
-  ignore_errors: true
-  when: send_mail=='TRUE'
+     
+- block:       
 
-- debug:
-    msg: 'Unused Disk Info email sent to {{email_to}}.'
-  run_once: true   
+    - name: Send email to group.
+      mail:
+        subject: "{{email_subject}}"
+        host: '{{smtp_server}}'
+        port: 25
+        body: '{{email_body}}'
+        from: '{{email_group}}'
+        to: '{{email_to}}'
+        attach: './email.txt'
+      delegate_to: localhost # ansible
+      run_once: true  
+      ignore_errors: true
+    
+    - debug:
+        msg: 'Unused Disk Info email sent to {{email_to}}.'
+      run_once: true   
+  
+  when: send_mail=='TRUE'
   
