--- a/tasks/create_log.yml
+++ b/tasks/create_log.yml
@@ -11,12 +11,12 @@
   file: path={{pre_check_tmp}} state=directory
 - file: mode=0777 path={{pre_check_tmp}}
 - name: "create {{pre_check_logs}}"
-  shell: "echo '' > {{pre_check_logs}}"
+  shell: "touch {{pre_check_logs}}"
 - file: mode=0666 path={{pre_check_logs}}
 - name: "check size of {{pre_check_logs}}"
   stat: path={{pre_check_logs}}  
   register: x
-  failed_when: x.stat.size!=1
+  failed_when: x.stat.size!=0
 - shell: |
          echo >> {{pre_check_logs}}  # first line
-         
+  when: lines|default(False)       
