add copy email to client

--- a/tasks/mail.yml
+++ b/tasks/mail.yml
@@ -36,3 +36,10 @@
   
   when: send_mail=='TRUE'
   
+- name: "Copy email.txt to client {{inventory_hostname}}"
+  copy:
+    src: ./email.txt
+    dest: ./email.txt
+  run_once: true
+  mode: 0022   
+  when: send_mail=='FALSE'     
