--- a/tasks/mail.yml
+++ b/tasks/mail.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Init email.txt
-  shell: touch ./email.txt
+  shell: rm -f ./email.txt
   delegate_to: localhost # ansible
   run_once: true
 
